# trino-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: mcp.json
examples/claude-code/: CLAUDE.md  README.md  mcp.json
examples/claude-code/.claude/agents/: trino-query.md
src/trino_mcp/: __init__.py  __main__.py  client.py  config.py  readonly.py  server.py
tests/: test_readonly.py
